2006-10-19  Brian Bidulock  <bidulock@openss7.org>

	* src/include/sys/xti_sctp.h: added ETSI SACK frequency option

2006-10-12  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: removed redundant debug flags
	* src/modules/inet/rawip.c: removed redundant debug flags
	* src/modules/inet/udp.c": removed redundant debug flags

2006-10-10  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/man/strss7.refs: updates for release
	* doc/man/man7/CC_NOTIFY_IND.7.man: updates for release
	* doc/man/man7/CC_NOTIFY_REQ.7.man: updates for release
	* doc/man/man7/CC_START_RESET_IND.7.man: updates for release
	* doc/man/man7/CC_STATUS_IND.7.man: updates for release
	* doc/man/man7/CC_STOP_IND.7.man: updates for release
	* doc/man/man7/CC_STOP_REQ.7.man: updates for release
	* doc/man/man7/CC_SUSPEND_RES.7.man: updates for release

2006-10-05  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updates for release
	* NEWS: updates for release
	* README: updates for release
	* THANKS: updates for release
	* doc/manual/descrip.texi: updates for release
	* doc/manual/news.texi: updates for release
	* doc/manual/todo.texi: updates for release

2006-10-03  Brian Bidulock  <bidulock@openss7.org>

	* configure.ac: add config file
	* doc/manual/descrip.texi: update release notes
	* doc/manual/news.texi: update release notes
	* doc/manual/prerequisites.texi: update release notes
	* Makefile.am: remove AUTOCONFIG_H
	* src/include/Makefile.am: paramterize
	* src/include/sys/strss7/version.h.in: added comments

	* src/include/sys/strss7/config.h.in: added config.h file

2006-10-02  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: add includes for new packages
	* strss7.spec.in: corrections, cooked manpages and documentation
	* debian/changelog: notes
	* debian/control.in: mostly text description formatting