@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: test-etsi_n.c,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2006/07/08 07:26:25 $
+ @(#) $RCSfile: test-etsi_n.c,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2006/10/19 17:18:54 $
 
  -----------------------------------------------------------------------------
 
@@ -59,11 +59,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2006/07/08 07:26:25 $ by $Author: brian $
+ Last Modified $Date: 2006/10/19 17:18:54 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: test-etsi_n.c,v $
+ Revision 0.9.2.4  2006/10/19 17:18:54  brian
+ - sync
+
  Revision 0.9.2.3  2006/07/08 07:26:25  brian
  - removed trigraphs
 
@@ -87,9 +90,9 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: test-etsi_n.c,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2006/07/08 07:26:25 $"
+#ident "@(#) $RCSfile: test-etsi_n.c,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2006/10/19 17:18:54 $"
 
-static char const ident[] = "$RCSfile: test-etsi_n.c,v $ $Name:  $($Revision: 0.9.2.3 $) $Date: 2006/07/08 07:26:25 $";
+static char const ident[] = "$RCSfile: test-etsi_n.c,v $ $Name:  $($Revision: 0.9.2.4 $) $Date: 2006/10/19 17:18:54 $";
 
 /*
  *  This file is for testing the sctp_t module.  It is provided for the
@@ -5845,12 +5848,21 @@ Checks that the IUT makes a complete association procedure."
 int
 test_case_1_1_1_top(int child)
 {
+	/* Issue an N_CONN_REQ with the address of the PT */
+	/* Expect an N_CONN_CON followed by an N_DISCON_IND */
 	return (__RESULT_SKIPPED);
 }
 
 int
 test_case_1_1_1_bot(int child)
 {
+	/* expect an N_CONN_IND with the INIT */
+	/* check the coding of the INIT */
+	/* respond with an INIT-ACK one address with a bogus cookie */
+	/* expect a COOKIE-ECHO */
+	/* check the coding of the COOKIE-ECHO */
+	/* send a COOKIE-ACK */
+	/* send an ABORT */
 	return (__RESULT_SKIPPED);
 }
 
@@ -5880,12 +5892,21 @@ an INIT from the PT."
 int
 test_case_1_1_2_top(int child)
 {
+	/* Issue an N_BIND_REQ that listens on the IUT address */
+	/* Expect an N_CONN_IND */
+	/* Accept the N_CONN_IND with an N_CONN_RES */
+	/* Expect an N_DISCON_IND */
 	return (__RESULT_SKIPPED);
 }
 
 int
 test_case_1_1_2_bot(int child)
 {
+	/* Send an INIT to the tester (N_CONN_REQ) */
+	/* expect an INIT-ACK (N_CONN_CON) */
+	/* Send an COOKIE-ECHO to the tester with the cookie (N_DATA_REQ) */
+	/* expect a COOKIE-ACK (N_DATA_IND) */
+	/* Send an ABORT (N_DISCON_REQ) */
 	return (__RESULT_SKIPPED);
 }
 
@@ -5916,12 +5937,17 @@ again."
 int
 test_case_1_2_1_top(int child)
 {
+	/* Issue an N_CONN_REQ */
+	/* Expect an N_DISCON_IND */
 	return (__RESULT_SKIPPED);
 }
 
 int
 test_case_1_2_1_bot(int child)
 {
+	/* expect an INIT (N_CONN_IND) and discard (N_DISCON_REQ) */
+	/* expect an INIT (N_CONN_IND) and refuse with ABORT (N_DISCON_REQ) */
+	/* check T1 between INITs */
 	return (__RESULT_SKIPPED);
 }
 
@@ -5952,12 +5978,19 @@ message again."
 int
 test_case_1_2_2_top(int child)
 {
+	/* Issue an N_CONN_REQ */
+	/* Expect an N_DISCON_IND */
 	return (__RESULT_SKIPPED);
 }
 
 int
 test_case_1_2_2_bot(int child)
 {
+	/* expect an INIT (N_CONN_IND) and reply with INIT-ACK (N_DISCON_REQ) */
+	/* expect a COOKIE-ECHO (N_CONN_IND) and discard (N_DISCON_REQ) */
+	/* expect a COOKIE-ECHO (N_CONN_IND) and reject w/ ABORT (N_DISCON_REQ) */
+	/* check T1 between COOKIE-ECHOs */
+
 	return (__RESULT_SKIPPED);
 }
 
@@ -5988,12 +6021,18 @@ stops the initialization process."
 int
 test_case_1_3_1_top(int child)
 {
+	/* Issue an N_CONN_REQ */
+	/* Expect an N_DISCON_IND */
 	return (__RESULT_SKIPPED);
 }
 
 int
 test_case_1_3_1_bot(int child)
 {
+	/* expect an INIT (N_CONN_IND) and discard (N_DISCON_REQ) */
+	/* expect an INIT (N_CONN_IND) and discard (N_DISCON_REQ) */
+	/* ... */
+	/* check T1 between INITs and number of INITs attempted */
 	return (__RESULT_SKIPPED);
 }
 
@@ -6024,12 +6063,19 @@ MAX.INIT.RETRANS times, stops the initialization process."
 int
 test_case_1_3_2_top(int child)
 {
+	/* Issue an N_CONN_REQ */
+	/* Expect an N_DISCON_IND */
 	return (__RESULT_SKIPPED);
 }
 
 int
 test_case_1_3_2_bot(int child)
 {
+	/* expect an INIT (N_CONN_IND) and reply with INIT-ACK (N_DISCON_REQ) */
+	/* expect a COOKIE-ECHO (N_CONN_IND) and discard (N_DISCON_REQ) */
+	/* expect a COOKIE-ECHO (N_CONN_IND) and discard (N_DISCON_REQ) */
+	/* ... */
+	/* check T1 between COOKIE-ECHOs and number of COOKIE-ECHOs attempted */
 	return (__RESULT_SKIPPED);
 }
 
