@@ -1,6 +1,7 @@
 2006-10-19  Brian Bidulock  <bidulock@openss7.org>
 
 	* doc/manual/strsctp.texi: added ETSI TS 102 144 PICS
+	* src/test/test-etsi_n.c: workup
 
 	* src/drivers/sctp2.c: added support for ETSI SACK frequency
 	* src/include/sys/npi_sctp.h: added support for ETSI SACK frequency
