@@ -1,6 +1,8 @@
 2006-10-19  Brian Bidulock  <bidulock@openss7.org>
 
 	* src/include/sys/xti_sctp.h: added ETSI SACK frequency option
+	* src/include/sys/npi_sctp.h: match to strsctp
+	* src/include/sys/tpi_sctp.h: match to strsctp
 
 2006-10-12  Brian Bidulock  <bidulock@openss7.org>
 
